style(feed post): add flex column to avoid any wrapping below thumbnail and vote arrows

--- a/src/components/feed-post/feed-post.module.css
+++ b/src/components/feed-post/feed-post.module.css
@@ -1,6 +1,14 @@
 .container {
   clear: both;
   padding-bottom: 8px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.leftcol {
+  float: left;
+  height: 100%;
+  flex-shrink: 0;
 }
 
 .midcol {
@@ -39,6 +47,7 @@
 }
 
 .entry {
+  flex-grow: 1;
   overflow: visible;
   padding: 0;
 }
